<resources>
    <string name="app_name">WorkManaging</string>
    <string name="selected_job">Selected Job</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Labels used in project detail -->
    <string name="label_title">Title</string>
    <string name="label_client">Client</string>
    <string name="label_dates">Dates</string>
    <string name="label_description">Description</string>
</resources>